# c-arraylist

./: .clang-format  CMakeLists.txt  LICENSE  README.md  array_list.c  array_list.h
tests/: array_list_test.c
